# alexandria-bot

./: Procfile  README.md  notes.txt  pyproject.toml  requirements.txt  tbody-results.html
alexandria_telegram_bot/: download_res.html  download_source_response.txt  global.js  index.py
alexandria_telegram_bot/controllers/: controllers.py
alexandria_telegram_bot/services/: scraper.py  scraper_libgen.py
alexandria_telegram_bot/utils/: phrases.py
tests/: test_alexandria_telegram_bot.py
